<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu"
    android:layout_weight="100"
    tools:context="com.example.waseem.splash.Menu">

    <include
        android:id="@+id/maintoolbar"
        layout="@layout/toolbar"

        />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:layout_below="@id/maintoolbar"
    android:id="@+id/Aya">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:text="@string/startup"/>

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:textColor="@android:color/white"
    android:layout_marginTop="10dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:text="@string/startingInfo"  />



</LinearLayout>

    <Button
        android:id="@+id/Tasbih"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Aya"
        android:background="@drawable/newborder"
        android:text="@string/Counter"

        android:layout_alignLeft="@+id/islamicGuidence"
        android:layout_alignStart="@+id/islamicGuidence"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="25dp"/>

    <Button
        android:id="@+id/Athkary"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/islamicGuidence"
        android:layout_alignStart="@+id/islamicGuidence"
        android:layout_marginBottom="25dp"
        android:layout_below="@id/Tasbih"
        android:background="@drawable/newborder"
        android:text="@string/AvailableList"
       />

    <Button
        android:id="@+id/islamicGuidence"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/AthkarAndIstighfar"
        android:layout_alignStart="@+id/AthkarAndIstighfar"
        android:layout_below="@+id/Athkary"
        android:layout_marginBottom="25dp"
        android:background="@drawable/newborder"
        android:text="@string/guidanceButton"
         />

    <Button
        android:layout_marginBottom="25dp"
        android:id="@+id/AthkarAndIstighfar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/islamicGuidence"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"

        android:background="@drawable/newborder"
        android:text="@string/AAA" />
</RelativeLayout>
